# frpc_tauri

./: package.json  pnpm-lock.yaml  tailwind.config.js
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: control.rs  frpc.rs  main.rs  service.rs
src/components/: Service.tsx
