[package]
name = "frpc"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2.1", features = [] }

[dependencies]
tauri = { version = "1.2.4", features = [] }
serde = { version = "1.0.158", features = ["derive"] }
serde_json = "1.0.94"
yamux = { git = "https://github.com/liudf0716/rust-yamux.git", version = "0.10.1" }
log = "0.4.17"
tokio = { version = "1.20.0", features = ["net", "rt", "macros","rt-multi-thread", "io-util"] }
md5 = "0.7.0"
anyhow = "1.0.58"
chrono = "0.4.19"
tokio-util = { version = "0.7.3", features = ["compat"] }
futures-util = "0.3.21"
futures = { version = "0.3.12", default-features = false, features = ["std"] }
ring = "0.16.20"
aes = "0.8.1"
cfb-mode = "0.8.2"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort" # Strip expensive panic clean-up logic
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true # Enables link to optimizations
opt-level = "s" # Optimize for binary size
strip = true # Remove debug symbols

